--- a/src/components/Product-swiper/productswiper.css
+++ b/src/components/Product-swiper/productswiper.css
@@ -1,8 +1,10 @@
 
 .hp-swiper-c-wrapper{
-    border: 1px solid #E3E3E3;
+    border:1px solid #dfdfdf;
     padding: 10px;
     border-radius: 10px;
+    text-decoration: none;
+    display: block;
 }
 .hp-disc-conte{
     display: flex;
@@ -10,18 +12,34 @@
     gap: 20px;
     font-weight: bold;
 }
+.hp-disc-conte p{
+    font-weight: bold;
+}
 .hp-disc-conte p:nth-child(2){
     font-size: 13px;
     text-decoration: line-through;
 }
+.hp-disc-conte p:first-child{
+    color:#30373e ;
+}
+.hp-disc-conte p:last-child{
+    color: #388e3c;
+}
 .swiper-button-prev:after, .swiper-button-next:after{
-    font-size: 20px ;
-    color: #333;
+    font-size: 12px ;
+    color: #ffffff;
     font-weight: bold;
 }
 .swiper-button-prev, .swiper-button-next{
-    background: #E3E3E3;
+    background: #000000;
     border-radius: 100%;
     height: 30px;
     width: 30px;
+}
+.hp-swip-th-title{
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
