--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,48 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-ul{
+body {
+    background: #F8FAFC;
+    color: #30373e;
+}
+
+ul {
     padding: 0;
     margin: 0;
 }
-p{
+
+p {
     margin: 0;
     color: #7d7d7d;
 }
-h1,h2,h3,h4,h5,h6{
-    color:#30373e;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: #30373e;
 }
 
-body{
-    background: #F8FAFC;
+
+body::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+body::-webkit-scrollbar
+{
+	width: 4px;
+	background-color: #F5F5F5;
+}
+body::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-image: linear-gradient( 111.4deg,  rgba(7,7,9,1) 6.5%, rgb(17, 16, 36) 93.2% );
 }
