updated Cart Quantity function and design changes

--- a/src/components/Nav/Navbar.css
+++ b/src/components/Nav/Navbar.css
@@ -1,7 +1,7 @@
 .navbar-links-ul{
     list-style: none;
     display: flex;
-    gap: 10px;
+    gap: 30px;
     justify-content: end;
 }
 
@@ -34,4 +34,22 @@
 .navbar-links-ul li .nav-link{
     color: #000;
     text-align: none;
+}
+
+.nav-cqpa{
+    position: relative;
+}
+.nav-cq{
+    position: absolute;
+    height: 18px;
+    width: 18px;
+    background: #000;
+    border-radius: 100%;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 11px;
+    left: 100%;
+    top: -10%;
 }
