--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 body {
     background: #F8FAFC;
     color: #30373e;
+    
 }
 
 ul {
@@ -45,4 +46,10 @@ body::-webkit-scrollbar-thumb
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
 	background-image: linear-gradient( 111.4deg,  rgba(7,7,9,1) 6.5%, rgb(17, 16, 36) 93.2% );
+}
+main{
+    min-height: 85vh;
+}
+.color-red{
+    color: red;
 }
