--- a/src/pages/Product/Product.css
+++ b/src/pages/Product/Product.css
@@ -53,3 +53,17 @@
 .nodroduct-wrap h3{
     font-weight: bold;
 }
+.pad-4{
+    padding: 15px;
+}
+
+@media only screen and (min-width:768px) and (max-width:1024px) {
+    .pad-4{
+        padding: 5px;
+    }
+}
+@media only screen and (max-width:767px){
+    .pad-4{
+        padding: 15px;
+    }
+}
