--- a/src/pages/ProductDetail/ProductDswip.css
+++ b/src/pages/ProductDetail/ProductDswip.css
@@ -7,7 +7,7 @@
      */
 
 #main-swip-img .swiper-slide{
-    border: 1px solid #dfdfdf;
+    border: 1px solid var(--border-color-primary);
     padding: 15px;
 }
 #thumb-swip-img  .swiper-slide-thumb-active{
@@ -18,7 +18,7 @@
     #thumb-swip-img .swiper-wrapper .swiper-slide {
         width: 100% !important;
         margin: 0px 0px 16px;
-        border: 1px solid #dfdfdf;
+        border: 1px solid var(--border-color-primary);
         padding: 5px;
     }
 }
