--- a/src/pages/CartWp/CartWp.css
+++ b/src/pages/CartWp/CartWp.css
@@ -21,7 +21,7 @@
     font-size: 16px;
 }
 .cartinc-inp{
-    border: 1px solid #808080;
+    border: 1px solid var(--border-color-primary);
     width: 55px;
     text-align: center;
 }
