--- a/src/pages/ProductDetail/ProductDswip.css
+++ b/src/pages/ProductDetail/ProductDswip.css
@@ -22,3 +22,26 @@
         padding: 5px;
     }
 }
+
+
+.custom-large-image{
+    position: fixed !important;
+    z-index: 9999 !important;
+    top: 0% !important;
+    left: 0% !important;
+    width: 100% !important;
+    height: 100% !important;
+    margin: 0 !important;
+    /* left: 110% !important;
+    width:  150% !important; */
+    background: #fff !important;
+}
+/* .pdimgss{
+    overflow: visible !important;
+}
+.pdimgss .swiper-wrapper .swiper-slide > div{
+    display: none !important;
+}
+.pdimgss .swiper-wrapper .swiper-slide.swiper-slide-active > div{
+    display: block !important;
+} */
